--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "0.23.0",
-    "bootstrap": "^5.2.3",
+    "bootstrap": "^5.3.1",
+    "html-to-react": "^1.6.0",
     "react": "^17.0.2",
-    "react-bootstrap": "^2.7.2",
     "react-dom": "^17.0.2",
+    "react-quill": "^1.3.5",
     "react-router-dom": "5.3.0",
     "react-scripts": "^5.0.1",
     "react-toastify": "8.0.2",
